k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app-sam-service
spec:
  selector:
    app: demo-express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
