k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: demo-express-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: express-app-sam-service
    weight: 100
  wildcardPolicy: None
